--- a/CVcss.css
+++ b/CVcss.css
@@ -18,9 +18,7 @@ header{
     background-color: rgb(73, 71, 71);
     font-size : xx-large;
     height: 5%;
-    color : white;
-    
-    
+    color : white;  
 }
 
 .intro{
@@ -36,5 +34,19 @@ header{
 .photo {
     text-align: center;
     border-radius: 50px;
+    
+}
+
+.presentation {
+    text-align: center;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2%;
+    padding : 1%;
+    border: ridge rgb(224, 224, 224);
+    box-shadow : 6px 6px 3px rgb(219, 217, 217);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.button {
     
 }
