--- a/CVcss.css
+++ b/CVcss.css
@@ -6,19 +6,21 @@ body{
 .contenu{
     width : 80%;
     margin : auto;
+    background-color: rgb(230, 230, 230);
 
 }
 header{
     width: 100%;
-    background-color: white;
-    box-shadow : 3
+    background-color:rgb(230, 230, 230);
+    box-shadow : 3;
 }
 .bande_noir{
     width: 100%;
-    background-color: rgb(73, 71, 71);
+    background-color: rgb(66, 66, 66);
     font-size : xx-large;
     height: 5%;
     color : white;  
+    padding-bottom: 1px;
 }
 
 .intro{
@@ -46,7 +48,164 @@ header{
     border: ridge rgb(224, 224, 224);
     box-shadow : 6px 6px 3px rgb(219, 217, 217);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(240, 240, 240);
 }
 .button {
     
+}
+
+
+.experience {
+    margin-top: 50px;
+    width : 80%;
+    height : 100%;
+    text-align: left;
+    position: absolute;
+   
+}
+    
+.experience h2 {
+    text-align: center;
+}
+
+
+.exp_1{
+    position: relative;
+    float : left;
+    width :22%;
+    margin-left: 150px;
+    margin-top: 110px;
+    background-color :rgb(243, 243, 243);
+       
+}
+.exp_1_content{
+    padding : 20px;
+    border: ridge rgb(224, 224, 224);
+    box-shadow : 6px 6px 3px white;
+}
+.exp_1 h3{
+    position: relative;
+    width : 100%;
+    background-color: rgb(66, 66, 66);
+    color: white;
+    padding : 3px;
+}
+.exp_2 {
+    position: relative;
+    width :20%;
+    border: solid 1px black;
+    float : right;
+    margin-right: 150px;
+    margin-top: 250px;
+    padding : 20px;
+    border: ridge rgb(224, 224, 224);
+    box-shadow : 6px 6px 3px rgb(219, 217, 217);
+    }
+    
+.exp_3 {
+    position: relative;
+    float : none;
+    width :20%;
+    margin-top: 450px;
+    margin-left: 150px;
+    padding : 20px;
+    border: ridge rgb(224, 224, 224);
+    box-shadow : 6px 6px 3px rgb(219, 217, 217);
+       
+    }
+    
+.exp_4 {
+    position: relative;
+    width :20%;
+    float: none;
+    padding : 20px;
+    margin-left: auto;
+    margin-right: 150px;
+    border: ridge rgb(224, 224, 224);
+    box-shadow : 6px 6px 3px rgb(219, 217, 217);
+    } 
+
+
+.skills {
+    
+    display : flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding : 20px;
+    margin-top : 1000px;
+    font-size: 20px;
+    
+  
+}
+
+.skill_1 {
+    background-color:rgb(66, 66, 66);
+    color: white;
+    width : 10%;
+    padding : 20px;
+}
+
+.skill_progress{
+    background-color: rgb(192, 192, 192); 
+        width: 80%; 
+        border-radius: 15px; 
+}
+.skill {
+    background-color: rgb(116, 194, 92); 
+    color: white; 
+    padding: 1%; 
+    text-align: right; 
+    font-size: 20px; 
+     border-radius: 15px; 
+}
+.python {
+    width : 70%;
+}
+
+.html {
+    width : 70%;
+}
+ 
+.java {
+    width : 30%;
+}
+
+.git {
+    width : 80%;
+}
+
+
+
+.skill_2 {
+    color: white;
+    background-color: rgb(66, 66, 66);
+    width : 10%;
+    padding : 20px;
+}
+
+.skill_3 {
+
+   background-color: rgb(66, 66, 66);
+    color: white;
+    width : 10%;
+    padding : 20px;
+}
+
+.lang {
+    background-color: rgb(116, 194, 92); 
+    color: white; 
+    padding: 1%; 
+    text-align: right; 
+    font-size: 20px; 
+     border-radius: 15px; 
+}
+
+.fr {
+    width : 100%
+}
+.ang{
+    width : 80%;
+}
+.esp{
+    width: 60%;
 }
